# shell_prompt

./: README.md  pyproject.toml  setup.py  shell_prompt  shell_prompt.conf
src/scripts/: shell_prompt.py
